[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings", "web-programming"]
description = "A Matrix client library."
documentation = "https://docs.rs/ruma-client"
edition = "2018"
homepage = "https://github.com/ruma/ruma-client"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client"
version = "0.2.0"

[dependencies]
js_int = "*"
futures-preview = "0.3.0-alpha.18"
reqwest = "0.10.0-alpha.1"
http = "0.1.18"
ruma-api = "*"
ruma-client-api = { git = "https://github.com/ruma/ruma-client-api" }
ruma-events = "0.12"

ruma-identifiers = "*"
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
url = "2.1.0"

[dependencies.serde]
version = "1.0.101"
features = ["derive"]

[dev-dependencies]
tokio = "0.2.0-alpha.6"
